--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Fabric Barn Corp!</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Fabric Barn Corp.</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  </head>
+  <body>
+    <header>
+      <div class="herodiv bounceIn">
+        <h1>Fabric Barn Corporation</h1>
+        <p>Your one stop shop for fabrics, tools and merchandise!</p>
+      </div>
+    </header>
 
-</head>
-<body>
-<div class="container">
-<header id="intro">
-  <div class="intro_container">
-  <h1>Fabric Barn Corporation</h1>
-  <p>Family Owned Small Local Business 
-    selling quality fabrics sold at an affordable price!
-    <br>
-    See our social media below!</p>
-    <hr>
-    <p>Click <a href="#map">here</a> for directions 😊.</p>
-  </div>
-</header>
+    <section id="about">
+        <h3>About Us <hr> </h3>
+        <p>We're a local Latin American family owned fabric business with over 20 years of experience. Stop in and check our materials. If we don't have what you're looking for, feel free to ask staff and we may order it!</p>
+    </section>
 
-<main>
-  <section id="quote">
-    <div class="textcontent">
-    <h1><a style="text-decoration:none;" href="https://www.yelp.com/biz/fabric-barn-corp-williamsburg?hrid=WE73vnIx-cye6DQ49HszXg&utm_campaign=www_review_share_popup&utm_medium=copy_link&utm_source=(direct)">Yelp Review </a></h1>
-    <p>This is such a great little fabric shop. There's so much fabric to choose from. The prices are affordable. I'm so happy it's a local Brooklyn shop because I hate having to go to Manhattan. The guy who helped me out was Jay and his hospitality will make your day!  </p>
-    </div>
-  </section>
-  
-  <section id="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3361253979815!2d-73.94350829999999!3d40.7106165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259563d2798c5%3A0xbcd35993dfd4002b!2sFabric+Barn+Corporation!5e0!3m2!1sen!2sus!4v1530222715480" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </section>
-  
-</main>
+    <section id="review">
+
+      <h3>What the people have to say!<hr></h3>
+
+      <p>"Customer service is great, it's a family business and they are friendly & helpful.  Its a convenient location near the L train & bus b43. Prices are affordable and they have a variety."</p>
 
 
-<footer>
-  <ul>
-    <li id="instagram"><a href="https://www.instagram.com/fabricbarnbusiness/" target="_blank">Instagram</a></li>
-    <li id="yelp"><a href="https://www.yelp.com/biz/fabric-barn-corp-williamsburg" target="_blank">Yelp</a></li>
-    <li id="facebook"><a href="https://www.facebook.com/Fabric-Barn-Corp-1754122101473419/" target="_blank">Facebook</a></li>
-  </ul>
-  <p>Designed by <a href="https://justinmr.github.io/portfolipagev1/"> Justin Michael Ramirez</a></p>
-</footer>
-  
-</div>
+      <div class="rightpane">
 
-</body>
+      </div>
+
+    </section>
+
+    <section id="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.3361253979815!2d-73.94350829999999!3d40.7106165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259563d2798c5%3A0xbcd35993dfd4002b!2sFabric+Barn+Corporation!5e0!3m2!1sen!2sus!4v1532450438568" width="1519" height="512" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </section>
+
+    <footer>
+      <div class="social-media-container">
+        <div class="facebook">
+          <a href="https://www.facebook.com/Fabric-Barn-Corp-1754122101473419/?rf=161530597204711" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+        <div class="instagram">
+          <a href="https://www.instagram.com/fabricbarnbusiness/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="yelp">
+          <a href="https://www.yelp.com/biz/fabric-barn-corp-williamsburg" target="_blank"><i class="fab fa-yelp"></i></a>
+        </div>
+      </div>
+
+      <p>Designed and developed with love, from your grandson, <a href="https://justinmr.github.io/portfolipagev1/" target="_blank">Justin Michael Ramirez</a></p>
+
+    </footer>
+  </body>
 </html>
