--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <p>Designed and developed with love, from your grandson, <a href="https://justinmr.github.io/portfolipagev1/" target="_blank">Justin Michael Ramirez</a></p>
+      <p>Designed and developed with love, from your grandson, <a href="https://justinmr.github.io/portfolio/" target="_blank">Justin Michael Ramirez</a></p>
 
     </footer>
   </body>
