--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "name": "Fabric Barn Corporation",
+          "url": "https://fabricbarncorp.com",
+          "sameAs": [
+            "https://www.facebook.com/Fabric-Barn-Corp-1754122101473419/?rf=161530597204711",
+            "https://www.instagram.com/fabricbarnbusiness/"
+          ]
+        }
+    </script>
   </head>
   <body>
     <header>
